apps/prowlarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  replicas: 1
  template:
    spec:
      volumes:
      - name: prowlarr-data
        persistentVolumeClaim:
          claimName: prowlarr-data-pvc

      containers: 
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: prowlarr-data
          mountPath: /config

      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr
        ports:
        - containerPort: 8191
