apps/prowlarr/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - '*.home.southcity.dev'
    secretName: prowlarr-cert
  rules:
  - host: prowlarr.home.southcity.dev
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
